--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LconsultDBConnection": "Data Source=E-LENOVO-LAPTOP\\SQLEXPRESS;Initial Catalog=LconsultDBv2;Integrated Security=True"
+
+  }
 }
