trying to orgnazie controllers

--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LconsultDBConnection": "Data Source=DESKTOP-4ISEN0S\\SQLEXPRESS;Initial Catalog=LconsultDBv2;Integrated Security=True"
-   // "LconsultDBConnection": "Data Source=E-LENOVO-LAPTOP\\SQLEXPRESS;Initial Catalog=LconsultDBv2;Integrated Security=True"
+   // "LconsultDBConnection": "Data Source=DESKTOP-4ISEN0S\\SQLEXPRESS;Initial Catalog=LconsultDBv2;Integrated Security=True"
+    "LconsultDBConnection": "Data Source=E-LENOVO-LAPTOP\\SQLEXPRESS;Initial Catalog=LconsultDBv2;Integrated Security=True"
 
   }
 }
