completing the editcourse module

--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\users\" />
+    <Folder Include="wwwroot\images\courses\" />
   </ItemGroup>
 
 </Project>
