adding details view page for reviews and view model

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /WebApplication2/appsettings.json
 /WebApplication2/appsettings.json
+/WebApplication2/appsettings.json
+/WebApplication2/appsettings.json
