--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Admin\Report.cshtml" />
     <Content Remove="Views\Test\Last.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="E:\visual studio projects\AbdullahRepositories\WebApplication2\WebApplication2\.editorconfig" />
     <None Include="efpt.config.json.user" />
+    <None Include="Views\Admin\Report.cshtml" />
     <None Include="Views\Test\Last.cshtml" />
     <None Include="wwwroot\Admin\assets\.DS_Store" />
     <None Include="wwwroot\Admin\assets\libs\.DS_Store" />
@@ -481,6 +483,14 @@
     <Content Include="Views\Test\Admin1\js\js\sidebarmenu.js" />
     <Content Include="Views\Test\Admin1\js\js\waves.js" />
     <Content Include="Views\Test\Admin1\js\pages\dashboard1.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Admin\Report.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Admin\Report.cshtml" />
   </ItemGroup>
 
 </Project>
